- now preserving Jenkins global or local MAVEN_OPTS - workaround for Java 16+ maven release plugin for OSSRH-66257 and NEXUS-26993